--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ body.light{--bg:#f7fafc;--bg2:rgba(10,20,40,.02);--card:rgba(255,255,255,.95);--
 
     <!-- photo -->
     <div class="photo-wrap">
-      <img src="profile_avatar.png" alt="Ahmed Ali" />
+      <img src="profile_avatar.jpeg" alt="Ahmed Ali" />
       <div class="scan"></div>
       <div class="fade"></div>
       <div class="nametag">
@@ -352,7 +352,7 @@ body.light{--bg:#f7fafc;--bg2:rgba(10,20,40,.02);--card:rgba(255,255,255,.95);--
   <div class="about-grid">
     <div class="about-side sr">
       <div class="ring">
-        <img src="profile_avatar.png" alt="Ahmed Ali" />
+        <img src="profile_avatar.jpeg" alt="Ahmed Ali" />
       </div>
       <p class="aname">Ahmed Ali</p>
       <p class="arole">AI Student · Egypt 🇪🇬</p>
