--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@ nav{position:fixed;top:0;left:0;right:0;z-index:999;display:flex;align-items:cen
 @keyframes blink{0%,100%{opacity:1}50%{opacity:.15}}
 .hero-name{font-family:var(--disp);font-weight:900;font-size:clamp(2.4rem,5vw,4.6rem);line-height:1.05;
   margin-bottom:14px;letter-spacing:-1px;
-  background:linear-gradient(135deg,#fff 25%,var(--blue) 65%,var(--cyan));
+  /* use variable for first color so it adapts to light/dark themes */
+  background:linear-gradient(135deg,var(--txt) 25%,var(--blue) 65%,var(--cyan));
   -webkit-background-clip:text;-webkit-text-fill-color:transparent;background-clip:text}
 .hero-role{font-family:var(--disp);font-size:clamp(.78rem,1.7vw,1.05rem);color:var(--blue);
   letter-spacing:4px;text-transform:uppercase;text-shadow:var(--glow);margin-bottom:24px}
